trying to fix links not showing for project sections

--- a/index.css
+++ b/index.css
@@ -251,7 +251,7 @@ img {
   main {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     padding-left: 15%;
     overflow-x: hidden;
